--- a/src/app/livre/livre.component.html
+++ b/src/app/livre/livre.component.html
@@ -1,1 +1,10 @@
-<p>livre works!</p>
+
+<h1>Liste des livres </h1>
+<img src={{couv}} width="100" height="100">
+<ul>
+    <li><strong> {{nom}}</strong></li>
+    <li > Prix:{{prix}}</li>
+    <li>Date Edition :{{date|date:"MM-yyyy"|uppercase}}</li>
+    <li>Donnez un % de promotion: <input type="text" [(ngModel)]="val"> {{prix*val}} </li>
+</ul>
+
